# Firmware

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  MatterPatch.diff  NIMBLE_patch.diff  NimBLE patch.diff  README.md  Source.code-workspace  main  matter-patch.diff  out.txt  partitions_16mb.csv  partitions_16mb_v2  partitions_16mb_v2.csv  partitions_4mb.csv  partitions_4mb_homekit.csv  partitions_4mb_v2  partitions_4mb_v2.csv  partitions_8mb.csv  partitions_custom.csv  partitions_empty.csv  partitions_plug.csv  platformio.ini  public_ota_signing_key  readme  sdkconfig  sdkconfig 2  sdkconfig 3  sdkconfig 4  sdkconfig 5  sdkconfig 6  sdkconfig 7  sdkconfig 8  sdkconfig.defaults  sdkconfig.defaults.esp32c6
drivers/BLE/: BLE.cpp  CMakeLists.txt  GATT.cpp
drivers/BLE/include/: BLE.h  GATT.h
drivers/Bluetooth/: BLE2902.cpp  BLE2904.cpp  BLEAddress.cpp  BLEAdvertisedDevice.cpp  BLEAdvertising.cpp  BLECharacteristic.cpp  BLECharacteristicMap.cpp  BLEClient.cpp  BLEClientGeneric.cpp  BLEDescriptor.cpp  BLEDescriptorMap.cpp  BLEDevice.cpp  BLEExceptions.cpp  BLEHIDDevice.cpp  BLERemoteCharacteristic.cpp  BLERemoteDescriptor.cpp  BLERemoteService.cpp  BLEScan.cpp  BLESecurity.cpp  BLEServer.cpp  BLEServerGeneric.cpp  BLEService.cpp  BLEServiceMap.cpp  BLEUUID.cpp  BLEUtils.cpp  BLEValue.cpp  CMakeLists.txt  GeneralUtils.cpp  component.mk
drivers/Bluetooth/include/: BLE2902.h  BLE2904.h  BLEAddress.h  BLEAdvertisedDevice.h  BLEAdvertising.h  BLECharacteristic.h  BLEClient.h  BLEClientGeneric.h  BLEDescriptor.h  BLEDevice.h  BLEExceptions.h  BLEHIDDevice.h  BLERemoteCharacteristic.h  BLERemoteDescriptor.h  BLERemoteService.h  BLEScan.h  BLESecurity.h  BLEServer.h  BLEServerGeneric.h  BLEService.h  BLEUUID.h  BLEUtils.h  BLEValue.h  GeneralUtils.h  HIDTypes.h
drivers/FreeRTOSWrapper/: CMakeLists.txt  FreeRTOSTask.cpp  FreeRTOSTask.h  FreeRTOSWrapper.cpp  FreeRTOSWrapper.h  component.mk
drivers/Memory/: CMakeLists.txt  Memory.h  NVSWrapper.cpp  PartitionAPI.cpp  SPIFlash.cpp  component.mk
drivers/Memory/include/: Memory.h  NVSWrapper.h  PartitionAPI.h  SPIFlash.h
drivers/Periphery/ds18b20-wrapper/: CMakeLists.txt  ds18b20-wrapper.cpp  ds18b20-wrapper.h
drivers/WiFi/: CMakeLists.txt  WiFi.cpp  WiFi.h  WiFiEventHandler.cpp  WiFiEventHandler.h  _mDNS.cpp  _mDNS.h  component.mk
libs/HTTPClient/: CMakeLists.txt  HTTPClient.cpp  HTTPClient.h  component.mk
main/: API.cpp  Automation.cpp  BLEClient.cpp  BLEServer.cpp  BLEServerGeneric.cpp  BootAndRestore.cpp  CMakeLists.txt  Commands.cpp  Data.cpp  Device.cpp  HandlersPooling.cpp  LocalMQTT.cpp  Log.cpp  MyWiFiHandler.cpp  Network.cpp  Query.cpp  RemoteControl.cpp  Scenarios.cpp  Sensors.cpp  Settings.cpp  Storage.cpp  WebServer.cpp  Wireless.cpp  main.cpp  project_include.cmake  sdkconfig.h
main/DataEndpoints/: DataRemote.cpp
main/Matter/: Custom.cpp  Device.cpp  DeviceCallbacks.cpp  EmberHandler.cpp  Matter.cpp  MatterDevice.cpp
main/PoolingHandlers/: EnergyHandler.cpp  OverheatHandler.cpp  PingPeriodicHandler.cpp  SensorPeriodicHandler.cpp  WiFiHandler.cpp  WirelessPriorityHandler.cpp
main/_HomeKit/: Custom.cpp  HomeKit.cpp  HomeKitAPI.cpp
main/commands/: CommandBLE.cpp  CommandIR.cpp  CommandMultiSwitch.cpp  CommandRGBW.cpp  CommandSwitch.cpp  CommandWindowOpener.cpp
main/data_endpoints/: DataRemote.cpp
main/handlers/: BluetoothHandler.cpp  OverheatHandler.cpp  Pooling.cpp  RemoteControlPeriodicHandler.cpp  WiFiHandler.cpp
main/include/: API.h  Automation.h  BLEServer.h  BLEServerGeneric.h  Commands.h  Data.h  Device.h  Globals.h  HandlersPooling.h  LocalMQTT.h  Log.h  MyWiFiHandler.h  Network.h  Query.h  RemoteControl.h  Scenarios.h  Sensors.h  Settings.h  Storage.h  WebServer.h  Wireless.h
main/matter/: Button.cpp  Custom.cpp  DeviceCallbacks.cpp  Matter.cpp  MatterAPI.cpp  SingleDeviceAppTask.cpp  SingleDeviceBindingHandler.cpp
main/pooling_handlers/: BluetoothHandler.cpp  EnergyHandler.cpp  MemoryCheckHandler.cpp  NetworkMapHandler.cpp  OverheatHandler.cpp  PingPeriodicHandler.cpp  RemoteControlPeriodicHandler.cpp  WiFiHandler.cpp  WirelessPriorityHandler.cpp
main/sensors/: SensorButton.cpp  SensorIR.cpp  SensorMeteo.cpp  SensorMotion.cpp  SensorMultiSwitch.cpp  SensorRGBW.cpp  SensorSwitch.cpp  SensorTemperature.cpp  SensorTouch.cpp  SensorWindowOpener.cpp
src/: ADCtest.cpp  API.cpp  Automation.cpp  BLEClient.cpp  BLEServer.cpp  BluetoothServer.cpp  BootAndRestore.cpp  CMakeLists.txt  Commands.cpp  Commands.pages  Converter.cpp  DS18B20test.c  Data.cpp  Device.cpp  JSON.cpp  KConfig.projbuild  LocalMQTT.cpp  Log.cpp  MQTT.cpp  Network.cpp  OTA.cpp  Query.cpp  RemoteControl.cpp  Scenarios.cpp  Sensors.cpp  Settings.cpp  Settings.h  Storage.cpp  Tools.cpp  WebServer.cpp  Wireless.cpp  component.mk  main.cpp  project_include.cmake  sdkconfig.h  test.cpp
src/HomeKit/: App.cpp  Custom.cpp  DB.cpp  HomeKit.cpp  HomeKit.h  HomeKitAPI.cpp
src/HomeKitADK/: App.cpp  DB.cpp  HomeKitADK.cpp
src/HomeKitSDK/: Custom.cpp  Custom.h  HomeKit.cpp  HomeKit.h
src/commands/: CommandBLE.cpp  CommandColor.cpp  CommandIR.cpp  CommandMultiSwitch.cpp  CommandRGBW.cpp  CommandSwitch.cpp  CommandWindowOpener.cpp
src/data_endpoints/: DataRemote.cpp
src/drivers/GPIO/: GPIO.h  (+1 more)
src/handlers/: BluetoothHandler.cpp  EnergyHandler.cpp  ExternalTempHandler.cpp  MQTTPeriodicHandler.cpp  NetworkMapHandler.cpp  OverheatHandler.cpp  PingPeriodicHandler.cpp  Pooling.cpp  SensorPeriodicHandler.cpp  WiFiHandler.cpp  WirelessPriorityHandler.cpp
src/include/: API.h  Automation.h  BLEClient.h  BLEServer.h  BluetoothServer.h  BootAndRestore.h  Commands.h  Commands.pages  Converter.h  Data.h  Device.h  Globals.h  JSON.h  LocalMQTT.h  Log.h  MQTT.h  Network.h  OTA.h  Query.h  RemoteControl.h  Scenarios.h  Sensors.h  Settings.h  Storage.h  Switch_str.h  Tools.h  WebServer.h  Wireless.h
src/sensors/: SensorColor.cpp  SensorIR.cpp  SensorMeteo.cpp  SensorMotion.cpp  SensorMultiSwitch.cpp  SensorRGBW.cpp  SensorSwitch.cpp  SensorTemperature.cpp  SensorTemperatureRemote.cpp  SensorTouch.cpp  SensorWindowOpener.cpp
(+249 files in other folders)
